fix: Dummy commented code

--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
                 <div class="card">
                     <img src="https://swiperjs.com/demos/images/nature-2.jpg"/>
                     <h2>Dummy Card</h2>
                     <button class="detail-button">
-                        <span onclick="detailData()" title="Lihat detail"><i class="fa-solid fa-eye"></i></span>
+                        <span onclick="detailData(0)" title="Lihat detail"><i class="fa-solid fa-eye"></i></span>
                         <span onclick="editData()" title="Edit data"><i class="fa-solid fa-pencil"></i></span>
                         <span onclick="deleteData()" title="Hapus data"><i class="fa-solid fa-trash"></i></span>
                     </button>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="swiper-pagination"></div>
     </div>
