fix: restructure tag

--- a/index.html
+++ b/index.html
@@ -84,25 +84,25 @@
             <div class="flex-row">
 				<div class="left">
                     <label for="title">Judul lagu</label>
-                    <input type="text" id="title" name="title" placeholder="Masukkan judul lagu" required/>
+                    <input type="text" id="title" name="title" placeholder="Masukkan judul lagu"/>
                     <label for="artist">Nama penyanyi/band</label>
-                    <input type="text" id="artist" name="artist" placeholder="Masukkan nama penyanyi/band" required/>
+                    <input type="text" id="artist" name="artist" placeholder="Masukkan nama penyanyi/band"/>
                     <label for="album">Album lagu</label>
-                    <input type="text" id="album" name="album" placeholder="Masukkan nama album" required/>
+                    <input type="text" id="album" name="album" placeholder="Masukkan nama album"/>
                     <label for="year">Tahun rilis</label>
-                    <input type="number" id="year" name="year" placeholder="Masukkan tahun rilis" required/>
+                    <input type="number" id="year" name="year" placeholder="Masukkan tahun rilis"/>
                 </div>
 				<div class="right">
                     <label for="genre">Genre musik</label>
-                    <input type="text" id="genre" name="genre" placeholder="Masukkan genre musik" required/>
+                    <input type="text" id="genre" name="genre" placeholder="Masukkan genre musik"/>
                     <label for="duration">Durasi musik</label>
-                    <input type="text" id="duration" name="duration" placeholder="Masukkan durasi musik --Contoh (3:10)" required/>
+                    <input type="text" id="duration" name="duration" placeholder="Masukkan durasi musik --Contoh (3:10)"/>
                     <label for="lyrics">Lirik lagu</label>
-                    <input type="text" id="lyrics" name="lyrics" placeholder="Masukkan lirik lagu" required/>
+                    <input type="text" id="lyrics" name="lyrics" placeholder="Masukkan lirik lagu"/>
                     <label for="artwork" class="artDis"><i class="fa-solid fa-folder"></i> Pilih file Artwork</label>
-                    <input type="file" id="artwork" name="artwork" accept=".jpg, .jpeg, .png" onchange="displayFileName('artwork', 'artDis')" required/>
+                    <input type="file" id="artwork" name="artwork" accept=".jpg, .jpeg, .png" onchange="displayFileName('artwork', 'artDis')"/>
                     <label for="song" class="songDis"><i class="fa-solid fa-folder"></i> Pilih file Lagu</label>
-                    <input type="file" id="song" name="song" accept=".mp3, .m4a" onchange="displayFileName('song', 'songDis')" required/>
+                    <input type="file" id="song" name="song" accept=".mp3, .m4a" onchange="displayFileName('song', 'songDis')"/>
                 </div>
 			</div>
             <button id="saveNew" type="submit" onclick="createNew(event)">Simpan data</button>
@@ -150,3 +150,9 @@
 </body>
 
 </html>
+
+
+<!-- tweaker = https://drive.google.com/uc?export=view&id= -->
+
+<!-- https://drive.google.com/file/d/1zvfi5HFNPaSfjVyfYMjh1d0GUN28qXuY/view?usp=sharing -->
+<!-- https://drive.google.com/file/d/1IRbMnxSRbNr4FhZMQHGFHW5Ibv7PcBL2/view?usp=drive_link -->
