--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,7 @@
 
     <!-- Web Title -->
     <div class="container">
-        <h1 class="judul">Begadang jangan begadang, kalaw tiada artinya.. <br>Begadang boleh saja, kalaw besok
-            deadlinenya.. :v</h1>
+        <h1 class="judul">Muzyx Player</h1>
     </div>
 
     <!-- Swiper -->
